Source/WebKit2/Shared/qt/NativeWebMouseEventQt.cpp
@@ -30,7 +30,7 @@
 
 namespace WebKit {
 
-NativeWebMouseEvent::NativeWebMouseEvent(QGraphicsSceneMouseEvent* event, int eventClickCount)
+NativeWebMouseEvent::NativeWebMouseEvent(QMouseEvent* event, int eventClickCount)
     : WebMouseEvent(WebEventFactory::createWebMouseEvent(event, eventClickCount))
     , m_nativeEvent(event)
 {
